# jsk_aerial_robot

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.sh  .travis.yml  .yamlfmt.yaml  .yamllint  Dockerfile  MCU-development.md  Motion-Capture.md  Nvidia-Jetson.md  PlayStation-DualShock3.md  PlayStation-DualShock4.md  README.md  _config.yml  actuators.md  aerial_robot.rosinstall  aerial_robot_debian.rosinstall  aerial_robot_kinetic.rosinstall  aerial_robot_melodic.rosinstall  aerial_robot_noetic.rosinstall  aerial_robot_one.rosinstall  bloom.md  configure.sh  dragon.md  hydrus.md  index.md  interactive_marker.md  joystick.md  keyboard.md  mcu.md  network.md  onboard_procesors.md  q  readme.txt  requirements.txt  rosserial_cui.md  rqt.md  sensors.md  (+1 more)
3rdpary/acados/: CMakeLists.txt  package.xml
aerial_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
aerial_robot_base/: 2014-10-10-bad1.bag  CHANGELOG.rst  CMakeLists.txt  flight_control_plugins.xml  kf_plugins.xml  mainpage.dox  manifest.xml  package.xml  sensor_plugins.xml  setup.py
aerial_robot_base/cfg/: KalmanFilterBaroBias.cfg  KalmanFilterXYBias.cfg  PidPitchControl.cfg  PidRollControl.cfg  PidThrottleControl.cfg  PidYawControl.cfg  StateKalmanFilter.cfg  XYPidControl.cfg
aerial_robot_base/docs/: develop_mode.txt
aerial_robot_base/euslisp/: aerial-robot-interface.l
aerial_robot_base/launch/: hector_mapping.launch  px4flow.launch  simulation.launch
aerial_robot_base/msg/: Acc.msg  AerialRobotStatus.msg  ArMarkerData.msg  FlatnessPid.msg  FlightConfigCmd.msg  FlightNav.msg  FlightNav.msg~  FourAxisPidDebug.msg  ImuData.msg  ImuQu.msg  ImuSim.msg  MotorInfo.msg  MotorValue  OpticalFlowData.msg  Pid.msg  PidDebug.msg  PoseStamped.msg  Pwms.msg  State.msg  UavInfo.msg  UavType.msg  YawThrottleGain.msg  fourAxisPidDebug.msg
aerial_robot_base/scripts/: di_servo_init.py  difference.py  dx2lib.py  dx2lib.so.3.0  estimator_debugger.py  hovering_demo.py  keyboard_command.py  listner_0_1.py  prune_servo_listener.py  q_euler.py  rms.py  send_igmp_report.py  simple_demo.py  solidedge_cog_inertia_tensor_converter.py  test.py~  total.py  trajectory_demo.py
aerial_robot_base/src/: aerial_robot_base.cpp  aerial_robot_base_node.cpp  ar_marker_data.cpp  control_input_array.cpp  crc16.cpp  flight_control.cpp  flight_navigation.cpp  hovering_check.py  kalman_filter.cpp  mocap_node.cpp  quadcopter_state_estimation.cpp  rotate.cpp  sensor_plugin.cpp  sensor_plugin_test.cpp  state_estimation.cpp  telemetry_base.cpp  telemetry_drone.cpp  test_publish.cpp  tracking.cpp
aerial_robot_base/srv/: GetMotorNum.srv
aerial_robot_control/: CHANGELOG.rst  CMakeLists.txt  flight_control_plugins.xml  package.xml
aerial_robot_control/cfg/: ITerm.cfg  LQI.cfg  NMPC.cfg  PID.cfg  PidControl.cfg  XYPidControl.cfg
aerial_robot_control/launch/: motor_power.launch
aerial_robot_control/plugins/: flight_control_plugins.xml  mpc_solver_plugins.xml  wrench_est_plugins.xml
aerial_robot_control/scripts/: circle_trajectroy_following_demo.py  requirements.txt  requirementsVIM4.txt  spinal_mrac_trigger.py  waypoint_pub_test.py
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_control/test/: README.md  test_nmpc.py
aerial_robot_dynamics/: CMakeLists.txt  package.xml
aerial_robot_dynamics/config/: rviz_config
aerial_robot_dynamics/launch/: display.launch  set_robot_description.launch
aerial_robot_dynamics/scripts/: pinocchio_robot_description_generator.py
aerial_robot_dynamics/src/: robot_model.cpp  robot_model_test.cpp  test_node.cpp
aerial_robot_dynamics/urdf/: robot.urdf
aerial_robot_estimation/: CHANGELOG.rst  CMakeLists.txt  package.xml
aerial_robot_estimation/cfg/: KalmanFilterXYBias.cfg
aerial_robot_estimation/launch/: optical_flow.launch  sensor_testbed.launch
aerial_robot_estimation/plugins/: sensor_plugins.xml  vision_nodelet.xml
aerial_robot_estimation/scripts/: analyze_imu.py
aerial_robot_estimation/src/: optical_flow.cpp  optical_flow_node.cpp  state_estimation.cpp
aerial_robot_gazebo/: CMakeLists.txt  package.xml
aerial_robot_gazebo/launch/: hydrus_world.launch
aerial_robot_gazebo/urdf/: hydra3.gazebo  hydra3.gazebo.xacro  hydra3.gazebo~
aerial_robot_model/: CHANGELOG.rst  CMakeLists.txt  Dolphin_Model  Dragon_Model  Hydra_Model  README.md  mainpage.dox  manifest.xml  package.xml
aerial_robot_model/gazebo_models/: memo.txt
aerial_robot_model/launch/: aerial_robot_model.launch  display_urdf.launch  display_xacro_test.launch  display_xacro_with_joint_state_publisher.launch  display_xacro_without_joint_state_publisher.launch  frames.gv  hydrus_interactive_marker.launch  interactive_marker.launch  only_robot_model.launch  other_ojects.launch  other_ojects2.launch  rviz_config  rviz_fuerte_config  rviz_groovy_config  rviz_groovy_test_config  rviz_groovy_traj_config  rviz_hydro_config  rviz_indigo_config  traj_motion.launch  traj_motion.launch~  traj_motion_node.launch  traj_motion_node.launch~
aerial_robot_model/nodes/: aerial_robot_mode.l
aerial_robot_model/plugins/: robot_model_plugins.xml
aerial_robot_model/robots/: dolphin.urdf.xacro  dragon.urdf.xacro  dragon2.urdf.xacro  hydra.urdf  hydra.urdf.xacro  hydra3.urdf  hydra3.urdf.xacro  hydra_old.urdf  hydrax.urdf.xacro  hydrus3.urdf.xacro  quadcopter.urdf.xacro  test.urdf.xacro  tiltrotor.urdf.xacro
aerial_robot_model/script/: identify_inertial_params.py  (+2 more)
aerial_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
aerial_robot_simulation/: CHANGELOG.rst  CMakeLists.txt  Makefile  aerial_robot_hw_sim_plugins.xml  flight_controllers_plugins.xml  mujoco_robot_hw_sim_plugin.xml  package.xml  robot_hw_sim_plugin.xml
data_glove/: CMakeLists.txt  package.xml
hokuyo_estimation/: CMakeLists.txt  laser_filters_plugins.xml  package.xml
hydra/: 2015-01-12-17-06-03.bag  CMakeLists.txt
hydra/src/: test.cpp  (+2 more)
jsk_quadcopter/: CMakeLists.txt
kalman_filter/: CMakeLists.txt  kf_plugins.xml  package.xml
tracking/: CMakeLists.txt  package.xml
tree_tracking/: CMakeLists.txt  laser_filters_plugins.xml  package.xml
(+5298 files in other folders)
