<?xml version="1.0"?>
<package>
  <name>aerial_robot</name>
  <version>1.0.0</version>
  <description>Software of JSK lab for aerial robot</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>aeiral_robot_msgs</run_depend>
  <run_depend>aeiral_robot_model</run_depend>
  <run_depend>aeiral_robot_base</run_depend>
  <run_depend>aerial_robot_comm</run_depend>
  <run_depend>aerial_robot_simulation</run_depend>
  <run_depend>hydrus_transform_control</run_depend>
  <run_depend>hydrus_moveit_config</run_depend>
  <run_depend>di_control</run_depend>
  <run_depend>motor_test</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
