<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot</name>
  <version>1.3.4</version>
  <description>Software of JSK lab for aerial robot</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>aerial_robot_base</exec_depend>
  <exec_depend>aerial_robot_control</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <exec_depend>aerial_robot_simulation</exec_depend>
  <exec_depend>dragon</exec_depend>
  <exec_depend>hydrus</exec_depend>
  <exec_depend>hydrus_xi</exec_depend>
  <exec_depend>mini_quadrotor</exec_depend>
  <exec_depend>motor_test</exec_depend>
  <exec_depend>spinal</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python-is-python3</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
