<?xml version="1.0"?>
<package>
  <name>aerial_robot_base</name>
  <version>1.0.0</version>
  <description>The base for aerial robots</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer> 
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url> 
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>kalman_filter</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>kalman_filter</run_depend>
  <run_depend>aerial_robot_msgs</run_depend>
  <run_depend>spinal</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>joy</run_depend>

  <export>
    <kalman_filter plugin="${prefix}/kf_plugins.xml" />
    <aerial_robot_base plugin="${prefix}/sensor_plugins.xml" />
    <aerial_robot_base plugin="${prefix}/flight_control_plugins.xml" />
  </export>

</package>
