<?xml version="1.0"?>
<package>
  <name>aerial_robot_base</name>
  <version>1.3.4</version>
  <description>The base for aerial robots</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>aerial_robot_control</run_depend>
  <run_depend>aerial_robot_estimation</run_depend>
  <run_depend>aerial_robot_model</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>mocap_optitrack</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>ublox_gps</run_depend>
  <run_depend>ntrip_ros</run_depend>

</package>
