<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot_base</name>
  <version>1.3.6</version>
  <description>The base for aerial robots</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>aerial_robot_control</exec_depend>
  <exec_depend>aerial_robot_estimation</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">ipython</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">ipython3</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>mocap_optitrack</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_viewer</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>ntrip_ros</exec_depend>

</package>
