<?xml version="1.0"?>
<package format="2">
  <name>aerial_robot_dynamics</name>
  <version>0.0.0</version>
  <description>The aerial_robot_dynamics package</description>

  <maintainer email="sugihara@todo.todo">sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>osqp-eigen</build_depend>
  <build_depend>pinocchio</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>osqp-eigen</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
